Fri Jun 18 12:03:29 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Scheduler/Deployment_Event.cpp:

          Compile fix for non-inline builds.

Fri Jun 18 11:40:01 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/06_compilation.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Deployment:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Deployment/Plan.cdp:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Deployment/artifacts.cdp:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Deployment/connections.cdp:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Deployment/implementation.cdp:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Deployment/instance.cdp:
          Update.

Fri Jun 18 11:41:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataReader_T.h:
        * connectors/dds4ccm/impl/dds/DataReader_T.cpp:
          Removed static

Fri Jun 18 11:19:53 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/ContentFilteredTopic/ReadGet/Receiver/ReadGet_Test_Receiver_exec.cpp:
          Fixed double delete

Fri Jun 18 07:21:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/02_idl.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/04_dds4ccm.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/05_coding.html:
          Update.

Fri Jun 18 06:43:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/01_general.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/02_idl.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/03_executors.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/04_dds4ccm.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/05_coding.html: